buildout of services page continued, fixed nav spacing on screen sizes

--- a/source/assets/stylesheets/base/_typography.sass
+++ b/source/assets/stylesheets/base/_typography.sass
@@ -60,6 +60,14 @@ $Montserrat: 'Montserrat', serif
   font-family: $Lora
   margin-bottom: 20px
 
+.highlighted-content-box
+  position: relative
+  ::after
+    content: ""
+    display: block
+    width: 80px
+    border-bottom: 2px solid #ff3301
+
 .nav-headline
   font-family: $Lora
   font-size: 38px
@@ -72,6 +80,7 @@ $Montserrat: 'Montserrat', serif
 .body-copy
   font-family: $Lora
   font-size: 18px
+  color: #999999
 
 .contact-expander-text
   font-family: $Lora
