--- a/source/assets/stylesheets/components/_buttons.sass
+++ b/source/assets/stylesheets/components/_buttons.sass
@@ -33,3 +33,11 @@
   opacity: 0.6
   i
     padding-left: 10px
+
+.btn-seconday:hover
+  background-color: $white
+  color: $tks-blue
+  font-family: $Montserrat
+  opacity: 1.0
+  i
+    color: $tks-blue
