--- a/source/assets/stylesheets/components/_forms.sass
+++ b/source/assets/stylesheets/components/_forms.sass
@@ -18,6 +18,8 @@
     border-radius: 0
     border-color: $white
     border-width: 2px
+#getintouch-btn
+  margin-top: 263px
 .form-control::-webkit-input-placeholder
   color: $white
   font-family: $Lora, serif
