--- a/source/assets/stylesheets/components/nav.sass
+++ b/source/assets/stylesheets/components/nav.sass
@@ -14,6 +14,8 @@ html,body
     min-height: 100%
     padding: 0
     color: #333
+    @media screen and (max-width: 508px)
+      height: 1400px
 
 .fullscreen .modal-header
     border: none
@@ -30,7 +32,7 @@ html,body
 
 .nav-card
   margin-top: 200px
-  @media screen and (max-width: 508px)
+  @media screen and (max-width: 767px)
     margin-top: 100px
 
 .nav-card:hover
